add information comment